# sat-ctrl-dashboard

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  LICENSE  README.md  firebase.json
backend/: pyproject.toml
backend/app/: catalog.py  clouds.py  main.py  models.py  tle_sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  theme.css
frontend/src/components/: MapView.jsx  SatellitePanel.jsx  TopBar.jsx
frontend/src/lib/: propagation.js  useSatellites.js
