[project]
name = "sat-ctrl-backend"
version = "0.1.0"
description = "SAT-CTRL backend: TLE sync from CelesTrak and satellite metadata API"
license = { text = "MIT" }
authors = [{ name = "Pablo Rozas Larraondo" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sgp4>=2.23",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "eccodes>=2.47.0",
    "eccodeslib>=2.47.1.20",
]

[tool.uv]
package = false
